# JackDice

./: README.md  pyproject.toml
src/: config.py.txt  jackDice.py
src/JackDice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: dataPO.xlsx
